@@ -52,7 +52,7 @@ int main()
     /* perform the fit */
 
     printf( "Fitting:\n" );
-    lmcurve_fit( n_par, par, m_dat, t, y, f, &control, &princon, &status );
+    lmcurve( n_par, par, m_dat, t, y, f, &control, &princon, &status );
 
     /* print results */
 
